# SoloLeveling

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  Jenkinsfile  Mysql.cpp  Notes.md  README.MD  SoloLeveling  SoloLeveling.code-workspace  Start.sh  StartProgram.sh  Users.sql  base DB.sql  docker-compose.yaml  docker-install.sh  importance_filler.sql  initialize.sh  main.cpp  mywebsite.py  start.sh  test.yaml  vars.env
.github/workflows/: main.yaml
BaseImages/: Dockerfile-portfolioapp
ENV/: Mysql.env  static.env
crow/: crow.h
htmls/: index.html
htmls_raw/: index.html
include/: Auxiliary.h  Mysql.h  Player.h  PlayerGrowth.h  Setup.h
kubernetes/: appdeploy.yaml  dbdeploy.yaml  ingress.yaml  mystatic-site.yaml  project-upskill.yaml
libraries/: Auxiliary.cpp  CMakeLists.txt  Mysql.cpp  Player.cpp  PlayerGrowth.cpp  Setup.cpp
static/: LoadGame.css  LoadGame.js  circle.css  index.css  index.js  tasks.css  tasks_getTasks.js
templates/: LoadGame.html  index.html  index2.html  new_player.html  post.html  tasks.html
templates_raw/: LoadGame.html  index.html
